# workflows2025

./: .gitignore
.github/workflows/: ci.yml  publish-pypi.yml
AgencySetup__definition_workflow_02SXUJEPXUX900xvB8Y8xnpBhafIT7uWW51/: definition_workflow_02SXUJEPXUX900xvB8Y8xnpBhafIT7uWW51.json
CreateMerakiOrgNetworkSsidSaml__definition_workflow_02PZ7X9H9W8Y4m5N2p1Q0rS3tU4vW5xYz6/: definition_workflow_02PZ7X9H9W8Y4m5N2p1Q0rS3tU4vW5xYz6.json
ListTheSecurityDetailsOfTheSwitch__definition_workflow_02T565L37MS5S4py5HSozkEPJals5ar1HWr/: definition_workflow_02T565L37MS5S4py5HSozkEPJals5ar1HWr.json
NewMerakiSetup__definition_workflow_02SXUJEPXUX900xvB8Y8xnpBhafIT7uWW51/: definition_workflow_02SXUJEPXUX900xvB8Y8xnpBhafIT7uWW51.json
SoftwareUpgrades__definition_workflow_02SXTXDT616PR7JIITNipAArtShUtePXWei/: definition_workflow_02SXTXDT616PR7JIITNipAArtShUtePXWei.json
UpdateSwithportsWithOurWalledGardenPolicyOfVLAN911__definition_workflow_02T5VS54BEIDO0Bqqy8nM7F9lKaUZgXNZe3/: definition_workflow_02T5VS54BEIDO0Bqqy8nM7F9lKaUZgXNZe3.json
XeUpgradeDownloadInstall__definition_workflow_02P2W9QM5HKX310sEkbhcXLfXwqjWjKDu2J/: definition_workflow_02P2W9QM5HKX310sEkbhcXLfXwqjWjKDu2J.json
XeUpgradePreCheck__definition_workflow_02P2TQOB7DX6K3gAgOuYpTjybvDO9rat6So/: definition_workflow_02P2TQOB7DX6K3gAgOuYpTjybvDO9rat6So.json
bin_server/: README.md  add_file.sh  bin_server.service  config.py  install.sh  main.py  pyproject.toml
bin_server/tests/: test_main.py
fwserve/: .gitignore  README.md  SYSLOG_FILTERING.md  VALIDATION_REPORT.md  bin_server.service  install.sh  pyproject.toml
fwserve/src/fwserve/: __init__.py  app.py  cli.py  config.py  file_watcher.py  syslog_parser.py  syslog_server.py  syslog_store.py
fwserve/src/fwserve/templates/: index.html  syslog.html  upload.html
fwserve/tests/: __init__.py  conftest.py  test_cli.py  test_main.py  test_syslog.py
